# VTRACE

./: .gitignore  ImplementationPlan.MD  NHT_MAX_RUNBOOK.md  README.md  main.py  pyproject.toml
config/: default.yaml  nht_max.yaml  private_absgs_fregs.yaml  private_fast.yaml  private_high.yaml  public_absgs_fregs.yaml  public_fast.yaml  public_high.yaml
notebooks/: 01_data_analysis_and_training.ipynb  02_inference_and_submission.ipynb
output_private_fast/models/HCM0249/: cameras.json  cfg_args  exposure.json
output_private_fast/models/HCM0254/: cameras.json  cfg_args
output_private_high/models/HCM0249/: cfg_args
output_public_fast/models/HCM0181/: cfg_args  exposure.json
output_test/models/HCM0181/: cameras.json  cfg_args
output_test/models/HCM0193/: cameras.json  cfg_args  exposure.json
output_test/models/HCM0204/: cameras.json  cfg_args  exposure.json
output_test/models/hcm0031/: cameras.json  cfg_args  exposure.json
output_test/models/hcm0034/: cameras.json  cfg_args  exposure.json
pipeline/: run_pipeline.py
scripts/: 3dgrut_render_vtrace.py  check_camera_models.py  evaluate_public.py  launch_nht_max.sh  render_sweep.py  run_baseline.sh  run_nht_max.py  setup_3dgrut_nht.sh  setup_3dgs.py  setup_3dgs.sh  setup_all.sh  setup_data.sh  test_baseline.sh
src/vtrace/: appearance.py  data_utils.py  densify.py  depth_estimator.py  evaluator.py  nht_adapter.py  post_processor.py  quality_filter.py  renderer.py  trainer.py
src/vtrace/patches/: arguments_init.py  camera_utils.py  cameras.py  dataset_readers.py  gaussian_model.py  gaussian_renderer.py  rasterizer_impl.h  train.py
tests/: test_evaluator_partial.py  test_nht_adapter.py
