[project]
name = "vtrace"
version = "0.1.0"
description = "VAI NVS 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "plyfile",
    "tqdm",
    "ipykernel",
    "torch",
    "torchvision",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
