[project]
name = "vtrace"
version = "0.1.0"
description = "VAI NVS 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "plyfile",
    "tqdm",
    "ipykernel",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "pyyaml>=6.0.3",
    "opencv-python",
    "joblib",
    "numpy<2",
    "setuptools<70",
    "wheel",
    "transformers>=4.40.0,<4.45.0",
    "accelerate",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
